sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:28: error: type mismatch;
 found   : Unit
 required: Int
  deplace(b%nbBases,p)
         ^InsertBaseball:32: error: not found: value getNombresBases
  var nbBases=getNombresBases()
              ^